WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209343
Fix JSCOnly build without unified sources
https://bugs.webkit.org/show_bug.cgi?id=209343
Summary
Fix JSCOnly build without unified sources
Justin Michaud
Reported
2020-03-20 09:22:11 PDT
I managed to get clangd to work for code completion using the following command: ./Tools/Scripts/build-webkit --jsc-only --cmakeargs="-DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DENABLE_UNIFIED_BUILDS=OFF" && compdb -p WebKitBuild/Release/ list > compile_commands.json This patch fixes the build for non-unified sources, and adds some extra clangd files to .gitignore.
Attachments
Patch
(2.91 KB, patch)
2020-03-20 09:28 PDT
,
Justin Michaud
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Justin Michaud
Comment 1
2020-03-20 09:28:27 PDT
Created
attachment 394092
[details]
Patch
Keith Miller
Comment 2
2020-03-20 10:22:32 PDT
Comment on
attachment 394092
[details]
Patch r=me
EWS
Comment 3
2020-03-20 11:39:41 PDT
Committed
r258774
: <
https://trac.webkit.org/changeset/258774
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 394092
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-03-20 11:40:12 PDT
<
rdar://problem/60696207
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug