Fix JSCOnly build without unified sources https://bugs.webkit.org/show_bug.cgi?id=209343

Patch by Justin Michaud <justin@justinmichaud.com> on 2020-03-20
Reviewed by Keith Miller.

.:

* .gitignore:

Source/JavaScriptCore:

I managed to get clangd to work for code completion using the following command:

./Tools/Scripts/build-webkit --jsc-only --cmakeargs="-DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DENABLE_UNIFIED_BUILDS=OFF" && compdb -p WebKitBuild/Release/ list > compile_commands.json

This patch fixes the build for non-unified sources, and adds some extra clangd files to .gitignore.

* API/MarkedJSValueRefArray.h:
* jit/JITPropertyAccess.cpp:

Canonical link: https://commits.webkit.org/222280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258774 268f45cc-cd09-0410-ab3c-d52691b4dbfc